--- a/modelo.html
+++ b/modelo.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Modelo de Exercicio</title>
+  <title>Hora do dia</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="carregar()"> 
   <header>
-    <h1>Titulo</h1>
+    <h1>Hora do dia</h1>
   </header>
   <section>
-    <div>
-      Testando...
+    <div id="msg" >
+      Aqui vai aparecer a mensagem...
     </div>
-    <div>
-      olá!
+    <div id="foto">
+        <img id="imagem" style="border-radius: 50%" width="250" height="250" src="manhã.jpg" alt="Foto do Dia">
     </div>
-  </section>
+   </section>
   <footer>
     <p>&copy; Sasaque</p>
   </footer>
