--- a/modelo.html
+++ b/modelo.html
@@ -3,21 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hora do dia</title>
+  <title>Modelo de Exercicio</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
-<body onload="carregar()"> 
+<body>
   <header>
-    <h1>Hora do dia</h1>
+    <h1>Verificador de idade</h1>
   </header>
   <section>
-    <div id="msg" >
-      Aqui vai aparecer a mensagem...
+    <div>
+      <p>Ano de Nascimento:
+        <input type="number" name="txtano" id="txtano">
+      </p>
+      <p>Sexo
+        <input type="radio" name="radsex" id="mas" checked>
+        <label for="mas">Masculino</label>
+        <input type="radio" name="radsex" id="fem">
+        <label for="fem">Feminino</label>
+      </p>
+      <p>
+        <input type="button" value="Verificar" onclick="verificar()">
+      </p>
     </div>
-    <div id="foto">
-        <img id="imagem" style="border-radius: 50%" width="250" height="250" src="manhã.jpg" alt="Foto do Dia">
+    <div id="res">
+      Preencha os dados acima para ver o resultado!
     </div>
-   </section>
+  </section>
   <footer>
     <p>&copy; Sasaque</p>
   </footer>
