--- a/modelo.html
+++ b/modelo.html
@@ -3,22 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tabuada</title>
+  <title>Analisador de Números</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
   <header>
-    <h1>Tabuada</h1>
+    <h1>Analisador de Números</h1>
   </header>
   <section>
     <div>
-      <p>Número: <input type="number" name="num" id="txtn">
-      <input type="button" value="Gerar Tabuada" onclick="tabuada()" ></p>
+      Número (entre 1 e 100)
+      <input type="number" name="fnum" id="fnum">
+      <input type="button" value="Adicionar" onclick="adicionar()">
+      <br><select name="flista" id="flista" size="6"></select>
+      <br> <input type="button" value="Filalizar">
     </div>
-    <div>
-      <select name="tabuada" id="seltab" size="10">
-        <option>Digite um número acima</option>
-      </select>
+    <div id="res">
+      
     </div>
   </section>
   <footer>
